// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rig /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Rig />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <RigNav
          configHandler={[Function]}
          error=""
          liveConfigHandler={[Function]}
          openConfigurationsHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <ExtensionViewContainer
          deleteExtensionViewHandler={[Function]}
          extension={Object {}}
          extensionViews={Array []}
          mode="viewer"
          openEditViewHandler={[Function]}
          openExtensionViewHandler={[Function]}
/>,
        false,
        false,
        <RigConfigurationsDialog
          closeConfigurationsHandler={[Function]}
          config={Object {}}
          refreshConfigurationsHandler={[Function]}
          show={false}
/>,
        <ExtensionRigConsole />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "configHandler": [Function],
          "error": "",
          "liveConfigHandler": [Function],
          "openConfigurationsHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": "rigNav",
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "deleteExtensionViewHandler": [Function],
          "extension": Object {},
          "extensionViews": Array [],
          "mode": "viewer",
          "openEditViewHandler": [Function],
          "openExtensionViewHandler": [Function],
        },
        "ref": "extensionViewContainer",
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "closeConfigurationsHandler": [Function],
          "config": Object {},
          "refreshConfigurationsHandler": [Function],
          "show": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <RigNav
            configHandler={[Function]}
            error=""
            liveConfigHandler={[Function]}
            openConfigurationsHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <ExtensionViewContainer
            deleteExtensionViewHandler={[Function]}
            extension={Object {}}
            extensionViews={Array []}
            mode="viewer"
            openEditViewHandler={[Function]}
            openExtensionViewHandler={[Function]}
/>,
          false,
          false,
          <RigConfigurationsDialog
            closeConfigurationsHandler={[Function]}
            config={Object {}}
            refreshConfigurationsHandler={[Function]}
            show={false}
/>,
          <ExtensionRigConsole />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "configHandler": [Function],
            "error": "",
            "liveConfigHandler": [Function],
            "openConfigurationsHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": "rigNav",
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "deleteExtensionViewHandler": [Function],
            "extension": Object {},
            "extensionViews": Array [],
            "mode": "viewer",
            "openEditViewHandler": [Function],
            "openExtensionViewHandler": [Function],
          },
          "ref": "extensionViewContainer",
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "closeConfigurationsHandler": [Function],
            "config": Object {},
            "refreshConfigurationsHandler": [Function],
            "show": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Rig /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Rig />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <RigNav
          configHandler={[Function]}
          error=""
          liveConfigHandler={[Function]}
          openConfigurationsHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <ExtensionViewContainer
          deleteExtensionViewHandler={[Function]}
          extension={Object {}}
          extensionViews={
                    Array [
                              Object {
                                "extension": Object {
                                  "authorName": "test",
                                  "channelId": "channelId",
                                  "description": "description",
                                  "iconUrl": "icon_url",
                                  "id": "id",
                                  "name": "name",
                                  "requestIdentity": false,
                                  "sku": "sku",
                                  "state": "state",
                                  "summary": "summary",
                                  "token": "token",
                                  "vendorCode": "vendorCode",
                                  "version": "0.1",
                                  "views": Object {
                                    "component": Object {
                                      "aspectHeight": 3000,
                                      "aspectWidth": 2500,
                                      "viewerUrl": "test",
                                      "zoom": false,
                                    },
                                    "config": Object {
                                      "viewerUrl": "test",
                                    },
                                    "liveConfig": Object {
                                      "viewerUrl": "test",
                                    },
                                    "panel": Object {
                                      "viewerUrl": "test",
                                    },
                                  },
                                  "whitelistedConfigUrls": Array [
                                    "foo",
                                  ],
                                  "whitelistedPanelUrls": Array [
                                    "bar",
                                  ],
                                },
                                "id": "1",
                                "linked": false,
                                "orientation": "Portrait",
                                "role": "Logged-Out Viewer",
                                "type": "Panel",
                                "x": 0,
                                "y": 0,
                              },
                            ]
          }
          mode="viewer"
          openEditViewHandler={[Function]}
          openExtensionViewHandler={[Function]}
/>,
        false,
        false,
        <RigConfigurationsDialog
          closeConfigurationsHandler={[Function]}
          config={Object {}}
          refreshConfigurationsHandler={[Function]}
          show={false}
/>,
        <ExtensionRigConsole />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "configHandler": [Function],
          "error": "",
          "liveConfigHandler": [Function],
          "openConfigurationsHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": "rigNav",
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "deleteExtensionViewHandler": [Function],
          "extension": Object {},
          "extensionViews": Array [
            Object {
              "extension": Object {
                "authorName": "test",
                "channelId": "channelId",
                "description": "description",
                "iconUrl": "icon_url",
                "id": "id",
                "name": "name",
                "requestIdentity": false,
                "sku": "sku",
                "state": "state",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "viewerUrl": "test",
                    "zoom": false,
                  },
                  "config": Object {
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [
                  "foo",
                ],
                "whitelistedPanelUrls": Array [
                  "bar",
                ],
              },
              "id": "1",
              "linked": false,
              "orientation": "Portrait",
              "role": "Logged-Out Viewer",
              "type": "Panel",
              "x": 0,
              "y": 0,
            },
          ],
          "mode": "viewer",
          "openEditViewHandler": [Function],
          "openExtensionViewHandler": [Function],
        },
        "ref": "extensionViewContainer",
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "closeConfigurationsHandler": [Function],
          "config": Object {},
          "refreshConfigurationsHandler": [Function],
          "show": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <RigNav
            configHandler={[Function]}
            error=""
            liveConfigHandler={[Function]}
            openConfigurationsHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <ExtensionViewContainer
            deleteExtensionViewHandler={[Function]}
            extension={Object {}}
            extensionViews={
                        Array [
                                    Object {
                                      "extension": Object {
                                        "authorName": "test",
                                        "channelId": "channelId",
                                        "description": "description",
                                        "iconUrl": "icon_url",
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentity": false,
                                        "sku": "sku",
                                        "state": "state",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 3000,
                                            "aspectWidth": 2500,
                                            "viewerUrl": "test",
                                            "zoom": false,
                                          },
                                          "config": Object {
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      },
                                      "id": "1",
                                      "linked": false,
                                      "orientation": "Portrait",
                                      "role": "Logged-Out Viewer",
                                      "type": "Panel",
                                      "x": 0,
                                      "y": 0,
                                    },
                                  ]
            }
            mode="viewer"
            openEditViewHandler={[Function]}
            openExtensionViewHandler={[Function]}
/>,
          false,
          false,
          <RigConfigurationsDialog
            closeConfigurationsHandler={[Function]}
            config={Object {}}
            refreshConfigurationsHandler={[Function]}
            show={false}
/>,
          <ExtensionRigConsole />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "configHandler": [Function],
            "error": "",
            "liveConfigHandler": [Function],
            "openConfigurationsHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": "rigNav",
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "deleteExtensionViewHandler": [Function],
            "extension": Object {},
            "extensionViews": Array [
              Object {
                "extension": Object {
                  "authorName": "test",
                  "channelId": "channelId",
                  "description": "description",
                  "iconUrl": "icon_url",
                  "id": "id",
                  "name": "name",
                  "requestIdentity": false,
                  "sku": "sku",
                  "state": "state",
                  "summary": "summary",
                  "token": "token",
                  "vendorCode": "vendorCode",
                  "version": "0.1",
                  "views": Object {
                    "component": Object {
                      "aspectHeight": 3000,
                      "aspectWidth": 2500,
                      "viewerUrl": "test",
                      "zoom": false,
                    },
                    "config": Object {
                      "viewerUrl": "test",
                    },
                    "liveConfig": Object {
                      "viewerUrl": "test",
                    },
                    "panel": Object {
                      "viewerUrl": "test",
                    },
                  },
                  "whitelistedConfigUrls": Array [
                    "foo",
                  ],
                  "whitelistedPanelUrls": Array [
                    "bar",
                  ],
                },
                "id": "1",
                "linked": false,
                "orientation": "Portrait",
                "role": "Logged-Out Viewer",
                "type": "Panel",
                "x": 0,
                "y": 0,
              },
            ],
            "mode": "viewer",
            "openEditViewHandler": [Function],
            "openExtensionViewHandler": [Function],
          },
          "ref": "extensionViewContainer",
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "closeConfigurationsHandler": [Function],
            "config": Object {},
            "refreshConfigurationsHandler": [Function],
            "show": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
